Prepared basic personal website for UU

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,24 @@
 
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="{{ 'css/main.css' | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="icon" type="image/x-icon" href="/favicon.png" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+  <script src="{{ 'css/jquery-3.5.1.min.js' | relative_url }}"></script>
+  <script src="{{ 'css/custom.js' | relative_url }}"></script>
+
+  {% if jekyll.environment == "production" %}
+  {% if site.analytics_id %}
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.analytics_id }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', '{{ site.analytics_id }}');
+  </script>
+  {% endif %}
+  {% endif %}
 </head>
